--- a/configs/openvoc_ytvis_2019/Base.yaml
+++ b/configs/openvoc_ytvis_2019/Base.yaml
@@ -16,13 +16,13 @@ MODEL:
     RES5_MULTI_GRID: [1, 1, 1]  # not used
 DATASETS:
   TRAIN: ("ytvis_2019_train",)
-  TEST: ("lvvis_val", )
+  TEST: ("burst_val", )
 SOLVER:
   IMS_PER_BATCH: 8
   BASE_LR: 0.0001
   STEPS: (10000,)
   MAX_ITER: 12000
-  CHECKPOINT_PERIOD: 1000
+  CHECKPOINT_PERIOD: 500
   WARMUP_FACTOR: 1.0
   WARMUP_ITERS: 10
   WEIGHT_DECAY: 0.05
@@ -39,7 +39,7 @@ INPUT:
   MIN_SIZE_TRAIN_SAMPLING: "choice_by_clip"
   RANDOM_FLIP: "flip_by_clip"
   AUGMENTATIONS: []
-  MIN_SIZE_TRAIN: (360, 480)
+  MIN_SIZE_TRAIN: (240, 360, 480)
   MIN_SIZE_TEST: 360
   CROP:
     ENABLED: False
@@ -47,7 +47,7 @@ INPUT:
     SIZE: (600, 720)
   FORMAT: "RGB"
 TEST:
-  EVAL_PERIOD: 1000
+  EVAL_PERIOD: 500
 DATALOADER:
   FILTER_EMPTY_ANNOTATIONS: False
   NUM_WORKERS: 4
