--- a/configs/openvoc_ytvis_2019/san_online_R50_bs8_12000st.yaml
+++ b/configs/openvoc_ytvis_2019/san_online_R50_bs8_12000st.yaml
@@ -37,10 +37,10 @@ MODEL:
     OVERSAMPLE_RATIO: 3.0
     IMPORTANCE_SAMPLE_RATIO: 0.75
     TEST:
+      WINDOW_INFERENCE: True
+      WINDOW_SIZE: 10
       SEMANTIC_ON: False
       INSTANCE_ON: True
       PANOPTIC_ON: False
       OVERLAP_THRESHOLD: 0.8
       OBJECT_MASK_THRESHOLD: 0.8
-INPUT:
-  SAMPLING_FRAME_NUM: 1
