--- a/configs/openvoc_ytvis_2019/san_R50_bs8_12000st.yaml
+++ b/configs/openvoc_ytvis_2019/san_R50_bs8_12000st.yaml
@@ -1,6 +1,6 @@
 _BASE_: Base.yaml
 MODEL:
-  META_ARCHITECTURE: "OV2Seg"
+  META_ARCHITECTURE: "SAN"
   SEM_SEG_HEAD:
     NAME: "MaskFormerHead"
     IGNORE_VALUE: 255
@@ -16,7 +16,7 @@ MODEL:
     COMMON_STRIDE: 4
     TRANSFORMER_ENC_LAYERS: 6
   MASK_FORMER:
-    TRANSFORMER_DECODER_NAME: "ZeroShotMultiScaleMaskedTransformerDecoder"
+    TRANSFORMER_DECODER_NAME: "SideAdapterVideoMultiScaleMaskedTransformerDecoder"
     TRANSFORMER_IN_FEATURE: "multi_scale_pixel_decoder"
     DEEP_SUPERVISION: True
     NO_OBJECT_WEIGHT: 0.1
@@ -32,7 +32,7 @@ MODEL:
     PRE_NORM: False
     ENFORCE_INPUT_PROJ: False
     SIZE_DIVISIBILITY: 32
-    DEC_LAYERS: 7  # 6 decoder layers, add one for the loss on learnable query
+    DEC_LAYERS: 10  # 9 decoder layers, add one for the loss on learnable query
     TRAIN_NUM_POINTS: 12544
     OVERSAMPLE_RATIO: 3.0
     IMPORTANCE_SAMPLE_RATIO: 0.75
@@ -42,5 +42,3 @@ MODEL:
       PANOPTIC_ON: False
       OVERLAP_THRESHOLD: 0.8
       OBJECT_MASK_THRESHOLD: 0.8
-INPUT:
-  SAMPLING_FRAME_NUM: 1
