--- a/configs/openvoc_ytvis_coco/openvis_online_R50_bs16_6000st.yaml
+++ b/configs/openvoc_ytvis_coco/openvis_online_R50_bs16_6000st.yaml
@@ -1,11 +1,10 @@
 _BASE_: Base.yaml
 MODEL:
-  WEIGHTS: 'work_dirs/openvoc_ytvis_2019/san_online_R50_bs8_12000st/model_final.pth'
-  META_ARCHITECTURE: "BriVIS"
+  META_ARCHITECTURE: "OpenVISOnline"
   SEM_SEG_HEAD:
     NAME: "MaskFormerHead"
     IGNORE_VALUE: 255
-    NUM_CLASSES: 1196
+    NUM_CLASSES: 1
     LOSS_WEIGHT: 1.0
     CONVS_DIM: 256
     MASK_DIM: 256
@@ -17,7 +16,7 @@ MODEL:
     COMMON_STRIDE: 4
     TRANSFORMER_ENC_LAYERS: 6
   MASK_FORMER:
-    TRANSFORMER_DECODER_NAME: "SideAdapterFrameMultiScaleMaskedTransformerDecoder"
+    TRANSFORMER_DECODER_NAME: "FrameMultiScaleMaskedTransformerDecoder"
     TRANSFORMER_IN_FEATURE: "multi_scale_pixel_decoder"
     DEEP_SUPERVISION: True
     NO_OBJECT_WEIGHT: 0.1
@@ -43,13 +42,10 @@ MODEL:
       PANOPTIC_ON: False
       OVERLAP_THRESHOLD: 0.8
       OBJECT_MASK_THRESHOLD: 0.8
-INPUT:
-  MIN_SIZE_TRAIN: (240, 360, 480)
-  MIN_SIZE_TEST: 360
-  SAMPLING_FRAME_NUM: 5
-  SAMPLING_FRAME_RANGE: 2
-SOLVER:
-  IMS_PER_BATCH: 8
-  CHECKPOINT_PERIOD: 500
-TEST:
-  EVAL_PERIOD: 500
+  CLIP_ADAPTER:
+    NAME: "ClipAdapter"
+    PROMPT_NAME: "vild"
+    CLIP_MODEL_NAME: "ViT-B/16"
+    CLIP_ENSEMBLE: True # use ensemble of two classification branches
+    CLIP_ENSEMBLE_WEIGHT: 0.5
+  
